# sieve-project

./: .gitignore  ARCHITECTURE.md  CHUNKED_PROCESSING.md  CLAUDE.md  DEPLOYMENT_INSTRUCTIONS.md  EXPERIMENTS.md  INSTRUCTIONS.md  KNOWN_LIMITATIONS.md  MANUSCRIPT_PLAN.md  PHASE3_GUIDE.md  PHASE_1B_PR_DESCRIPTION.md  PHASE_1C_PR_DESCRIPTION.md  PR_DESCRIPTION.md  README.md  SESSION_REPORT_2026-01-27.md  SESSION_REPORT_2026-01-29_CHUNKED_PROCESSING_FIXES.md  SESSION_REPORT_2026-01-29_PROJECT_STATUS.md  USER_GUIDE.md  environment.yml  mkdocs.yml  pyproject.toml  sieve_merged_references.bib  test_encoding_pipeline.py  test_model_architecture.py  test_training_pipeline.py  test_vcf_parser.py
.github/workflows/: deploy-docs.yml  tests.yml
conda/: README.md  USAGE.md  meta.yaml
configs/: default.yaml
configs/experiments/: ablation.yaml
documentation/: citation.md  command-reference.md  complete-workflow.md  detailed-usage.md  faq.md  index.md  installation.md  interpreting-results.md  license.md  quick-start.md  support.md  troubleshooting.md  validation.md
documentation/appendices/: experimental-protocol.md  method-references.md  model-architecture.md
documentation/javascripts/: mathjax.js
scripts/: __init__.py  ablation_compare.py  aggregate_gene_interactions.py  audit_cooccurrence.py  bootstrap_null_calibration.py  check_chromosome_distribution.py  check_sex_balance.py  compare_ablation_rankings.py  compare_attributions.py  correct_chrx_bias.py  create_null_baseline.py  epistasis_power_analysis.py  explain.py  extract_validation_burden.py  fix_ranking_outputs.py  gene_enrichment_plot.py  generate_mkdocs_docs.sh  generate_sieve_gene_list.py  infer_sex.py  manhattan_plot.py  plot_ablation.py  plot_ablation_comparison.py  plot_detailed_architecture.py  plot_null_comparison.py  plot_training_history.py  plot_validation_burden.py  preprocess.py  render_model_architecture.py  repair_gene_delta_rank.py  run_null_baseline.py  run_null_baseline_analysis.sh  summarize_classifier_comparison.py  test_burden_enrichment.py  train.py  validate_discoveries.py  validate_epistasis.py  validate_nonlinear_classifier.py
src/: __init__.py
src/data/: __init__.py  annotation.py  covariates.py  genome.py  vcf_parser.py
src/encoding/: __init__.py  chunked_dataset.py  levels.py  positional.py  sparse_tensor.py
src/explain/: __init__.py  attention_analysis.py  biological_validation.py  counterfactual_epistasis.py  gradients.py  shap_epistasis.py  variant_ranking.py
src/models/: __init__.py  aggregation.py  attention.py  chunked_sieve.py  classifier.py  encoder.py  sieve.py
src/training/: __init__.py  loss.py  trainer.py  validation.py
test_data/: parsed_clinvar.tsv  parsed_go.json  parsed_gwas.tsv  test_biomart.tsv  test_gwas.tsv  test_gwas_simple.tsv
test_data/small/: preprocessed_test.pt  test_data.vcf.gz.csi  test_data_phenotypes.tsv
test_data/small/test_model/L3_run/: config.yaml  cv_results.yaml
test_data/small/test_model/L3_run/fold_0/: training_history.yaml
test_data/small/test_model/L3_run/fold_1/: training_history.yaml
tests/: NULL_BASELINE_TEST_REPORT.md  _aggregate_gene_interactions_helpers.py  test_aggregate_gene_interactions_normalisation_topk_fdr.py  test_aggregate_gene_interactions_score_column.py  test_ancestry_pcs.py  test_attention_analysis.py  test_bootstrap_null_calibration.py  test_burden_validation.py  test_chrom_aware_attention.py  test_chunked_sieve.py  test_class_weighting.py  test_clinvar_matching.py  test_compare_ablation_rankings.py  test_cooccurrence_audit.py  test_correct_chrx_bias.py  test_counterfactual_epistasis_compat.py  test_epistasis_power.py  test_fold_config_saving.py  test_gene_interactions.py  test_gene_ranking_alternatives.py  test_generate_sieve_gene_list.py  test_genome_build.py  test_ig_covariates.py  test_nonlinear_validation.py  test_nonlinear_validation_delta_rank.py  test_null_baseline.py  test_null_baseline_protocol_matching.py  test_null_contrast.py  test_phase3_explain.py  test_ploidy_aware_dosage.py  test_repair_gene_delta_rank.py  test_sex_covariate.py  test_utilities.py  test_validate_epistasis_chunking.py  test_vcf_parser.py
utilities/: README.md  TESTING.md  download_clinvar.py  download_gene_ontology.py  download_gwas_catalog.py  test_download_urls.py
