[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sieve"
version = "1.0.0"
description = "Sparse Interpretable Exome Variant Explainer - Deep learning for genetic variant discovery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Francesco Lescai", email = "francesco.lescai@unipv.it"}
]
maintainers = [
    {name = "Francesco Lescai", email = "francesco.lescai@unipv.it"}
]
keywords = [
    "deep-learning",
    "genomics",
    "variant-discovery",
    "explainability",
    "epistasis",
    "case-control",
    "exome-sequencing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.24.0,<2.0",  # Pin to avoid captum/shap conflict
    "pandas>=2.0.0",
    "scipy>=1.10.0",

    # Deep learning
    "torch>=2.0.0",
    "captum>=0.6.0,<1.0",  # For integrated gradients (requires numpy<2.0)

    # Genomics
    "cyvcf2>=0.30.0",  # Fast VCF parsing

    # Machine learning utilities
    "scikit-learn>=1.3.0",
    "shap>=0.42.0,<0.50",  # SHAP values (compatible with numpy<2.0)

    # Statistical modelling
    "statsmodels>=0.14.0",  # Logistic regression for burden enrichment

    # Configuration and logging
    "pyyaml>=6.0",
    "tqdm>=4.65.0",

    # Data storage
    "pyarrow>=12.0.0",  # Parquet I/O for gene burden matrices

    # Visualization (Python side)
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",  # Used by plot_ablation_comparison.py when available
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.scripts]
sieve-preprocess = "scripts.preprocess:main"
sieve-infer-sex = "scripts.infer_sex:main"
sieve-check-sex-balance = "scripts.check_sex_balance:main"
sieve-train = "scripts.train:main"
sieve-explain = "scripts.explain:main"
sieve-create-null-baseline = "scripts.create_null_baseline:main"
sieve-run-null-baseline = "scripts.run_null_baseline:main"
sieve-compare-attributions = "scripts.compare_attributions:main"
sieve-correct-chrx-bias = "scripts.correct_chrx_bias:main"
sieve-validate-discoveries = "scripts.validate_discoveries:main"
sieve-validate-epistasis = "scripts.validate_epistasis:main"
sieve-compare-ablation-rankings = "scripts.compare_ablation_rankings:main"
sieve-ablation-compare = "scripts.ablation_compare:main"
sieve-plot-ablation-comparison = "scripts.plot_ablation_comparison:main"
sieve-audit-cooccurrence = "scripts.audit_cooccurrence:main"
sieve-epistasis-power-analysis = "scripts.epistasis_power_analysis:main"
sieve-aggregate-gene-interactions = "scripts.aggregate_gene_interactions:main"
sieve-generate-gene-list = "scripts.generate_sieve_gene_list:main"
sieve-extract-burden = "scripts.extract_validation_burden:main"
sieve-test-burden-enrichment = "scripts.test_burden_enrichment:main"

[project.urls]
Homepage = "https://github.com/lescailab/dl-exome-img"
Documentation = "https://github.com/lescailab/dl-exome-img#readme"
Repository = "https://github.com/lescailab/dl-exome-img"
Issues = "https://github.com/lescailab/dl-exome-img/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.setuptools.package-data]
scripts = ["*.sh"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
